[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scenes/mainmenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/rpg/png/buttonLong_brown.png" type="Texture" id=2]

[sub_resource type="Theme" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 417.0
margin_right = 607.0
margin_bottom = 600.0
alignment = 1

[node name="NewButton" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 190.0
margin_bottom = 245.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/NewButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Neues Spiel"
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 249.0
margin_right = 190.0
margin_bottom = 298.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/TextureButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Laden"
align = 1
valign = 1

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 190.0
margin_bottom = 351.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/TextureButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Einstellungen"
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 190.0
margin_bottom = 404.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Beenden"
align = 1
valign = 1
[connection signal="pressed" from="VBoxContainer/VBoxContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
